# libcitygml

./: CMakeLists.txt  ProjectHome.md  citygml2vrml.md
CMakeModules/: FindCityGML.cmake  FindXerces.cmake
include/: CityGMLObjects.h  CityGMLParser.h  Vec2.h  Vec3.h  Vec4.h  citygml.h  vecs.h
src/: CMakeLists.txt  CityGMLObjects.cpp  CityGMLParser.cpp  citymodel.cpp  parser.cpp  parser.h  parserlibxml2.cpp  parserxercesc.cpp  tesselator.cpp  tesselator.h  transform.h  utils.h
tags/libcitygml.v0.1.2/src/: citymodel.cpp  parser.cpp
tags/libcitygml.v0.1.2/test/: citygmltest.cpp
tags/libcitygml.v0.1.3/src/: parser.cpp  parser.h
tags/libcitygml.v0.1.3/test/citygml2vrml/: citygml2vrml.cpp
tags/web/images/: libcitygml.pdn
test/: CMakeLists.txt  citygmltest.cpp
test/citygml2vrml/: CMakeLists.txt  citygml2vrml.cpp
test/osgplugin/: CMakeLists.txt  ReaderWriterCityGML.cpp
trunk/CMakeModules/: FindCityGML.cmake
trunk/include/: citygml.h
trunk/src/: CMakeLists.txt  citymodel.cpp  parser.cpp  parser.h  parserlibxml2.cpp  parserxercesc.cpp  tesselator.cpp  tesselator.h  transform.h
trunk/test/: CMakeLists.txt  citygmltest.cpp
trunk/test/citygml2vrml/: CMakeLists.txt  citygml2vrml.cpp
trunk/test/osgplugin/: CMakeLists.txt  README  ReaderWriterCityGML.cpp  Thumbs.db
wiki/: citygml2vrml.wiki
