FIND_PACKAGE( XERCES REQUIRED )
FIND_PACKAGE( GLU REQUIRED )

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
	
ADD_DEFINITIONS( -DCITYGML_LIBRARY )

ADD_DEFINITIONS( -DLIBCITYGML_BUILD )

IF( LIBCITYGML_STATIC )
	ADD_DEFINITIONS( -DLIBCITYGML_STATIC )
ENDIF( LIBCITYGML_STATIC )

IF( LIBCITYGML_DYNAMIC )
	ADD_DEFINITIONS( -DLIBCITYGML_DYNAMIC )
ENDIF( LIBCITYGML_DYNAMIC )

SET( LIB_NAME citygml )

SET( LIBS ${XERCESC_LIBRARY} )

INCLUDE_DIRECTORIES( ../include ${XERCESC_INCLUDE} ${GLU_INCLUDE_PATH} )

SET( LIB_SRCS
	CityGMLObjects.cpp
	CityGMLParser.cpp
)

SET( LIB_PUBLIC_HEADERS
	../include/CityGMLObjects.h
	../include/CityGMLParser.h
	../include/Vec2.h
	../include/Vec3.h
	../include/Vec4.h
)
  
ADD_LIBRARY( ${LIB_NAME} ${LIBCITYGML_USER_DEFINED_DYNAMIC_OR_STATIC} ${LIB_PUBLIC_HEADERS} ${LIB_SRCS} )
	
IF( MSVC_IDE )
	SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES PREFIX "../" )
ENDIF( MSVC_IDE )

TARGET_LINK_LIBRARIES( ${LIB_NAME} ${XERCESC_LIBRARY} ${GLU_LIBRARY} )

INCLUDE(ModuleInstall OPTIONAL)