FIND_PACKAGE( CityGML REQUIRED )
FIND_PACKAGE( XERCES REQUIRED )

INCLUDE_DIRECTORIES( ${OSG_INCLUDE_DIRS} ${XERCESC_INCLUDE} ${CITYGML_INCLUDE_DIR} )

SET( TARGET_SRC ReaderWriterCityGML.cpp )

SET( TARGET_LIBRARIES_VARS OPENTHREADS_LIBRARY OSG_LIBRARY OSGDB_LIBRARY OSGUTIL_LIBRARY XERCESC_LIBRARY OSGTEXT_LIBRARY CITYGML_LIBRARY XERCESC_LIBRARY )

SETUP_PLUGIN( citygml )
